fix: edit the width on mobile

--- a/src/components/question/Question.css
+++ b/src/components/question/Question.css
@@ -1,7 +1,7 @@
 #question {
     margin:10vh 15px;
     align-self: center;
-    width:60vw;
+    width:80vw;
     max-width:1000px;
 }
 
